# POIS-Programming-Assignments

./: .gitignore  README.md  pyproject.toml
docs/: TEAM_SEQUENTIAL_WORKFLOW.md
scripts/: zip_for_whatsapp.sh  zip_for_whatsapp_in_windows.sh
src/pois/: __init__.py  cli.py  registry.py  runner.py  workflow.py  wrapper.py
src/pois/assignments/: __init__.py  base.py  pa00.py  pa01.py  pa02.py  pa03.py  pa04.py  pa05.py  pa06.py  pa07.py  pa08.py  pa09.py  pa10.py  pa11.py  pa12.py  pa13.py  pa14.py  pa15.py  pa16.py  pa17.py  pa18.py  pa19.py  pa20.py
src/pois_project.egg-info/: PKG-INFO  SOURCES.txt
webapp/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
webapp/src/: App.tsx  Pa01Panel.tsx  Pa02Panel.tsx  Pa03Panel.tsx  Pa04Panel.tsx  Pa05Panel.tsx  Pa06Panel.tsx  Pa07Panel.tsx  Pa08Panel.tsx  Pa09Panel.tsx  Pa10Panel.tsx  Pa11Panel.tsx  cca.ts  domain.ts  enc.ts  foundations.ts  ggm.ts  index.css  mac.ts  merkle.ts  modes.ts  pa08hash.ts  pa09birthday.ts  pa10hmac.ts  pa11dh.ts  prg.ts  routing.ts
workflow/: state.example.json  tasks.json
