[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pois-project"
version = "0.1.0"
description = "CS8.401 Principles of Information Security assignment scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "POIS Team" }
]
dependencies = [
  "cryptography>=41.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
